# voice-round

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: menu.rs
src/components/ChangelogPill/: ChangelogPill.tsx
src/components/FAQSection/: FAQSection.test.tsx  FAQSection.tsx
src/components/InstallSection/: ByokExplainerModal.tsx  CopyableCommand.test.tsx  InstallSection.test.tsx  InstallSection.tsx  IosInstallModal.tsx  OsWarning.tsx
src/components/Layout/: Layout.test.tsx  Layout.tsx
src/components/ui/: dialog.tsx
src/constants/: copy.ts  prompts.test.ts  prompts.ts
src/hooks/useAudioRecorder/: useAudioRecorder.ts
src/hooks/useHasSessions/: useHasSessions.ts
src/hooks/useLatestChangelog/: useLatestChangelog.test.ts  useLatestChangelog.ts
src/lib/: githubLatestRelease.test.ts  githubLatestRelease.ts  micError.ts  triggerDownload.test.ts
src/pages/Home/: Home.test.tsx  Home.tsx
src/pages/Session/: Session.tsx
src/services/stt/: stt.test.ts  stt.ts
src/services/tts/: playback.ts
