[package]
name = "voiceround"
version = "0.2.0"
description = "AI-powered mock interviewer for technical interview practice"
authors = ["rajat-mehra05"]
edition = "2021"

[lib]
name = "voiceround_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
# `sync-secret-service` pulls in libsecret at build time on Linux. Drop it
# if targeting macOS/Windows only.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Phase 7: Rust-proxied OpenAI calls.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "stream", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
bytes = "1"
thiserror = "1"
parking_lot = "0.12"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4.29"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"
